[package]
name = "arcell"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["arc", "cell", "arc-cell"]
authors = ["Zen <mr.sololife@gmail.com>"]
description = "Arc obtains internal variability"
repository = "https://github.com/soloist-v/arc_cell.git"
include = [
    "/src/*",
    "/Cargo.toml",
    "/readme.md",
]
[lib]
name = "arcell"
path = "src/lib.rs"

[dependencies]
arcell = "0.1"