[package]
name = "arcell"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["arc", "cell", "arc-cell"]
authors = ["Zen <mr.sololife@gmail.com>"]
description = "Arc obtains internal variability"
repository = "https://github.com/soloist-v/arcell.git"
include = [
    "/src/*",
    "/Cargo.toml",
    "/readme.md",
]
[lib]
name = "arcell"
path = "src/lib.rs"

[dependencies]
